RESOLVED FIXED 202318
Pages using WebGLRenderingContext fail to enter the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=202318
Summary Pages using WebGLRenderingContext fail to enter the back/forward cache
Chris Dumez
Reported 2019-09-27 09:57:26 PDT
Pages using WebGLRenderingContext fail to enter the back/forward cache.
Attachments
WIP Patch (15.55 KB, patch)
2019-09-27 10:59 PDT, Chris Dumez
no flags
WIP Patch (16.29 KB, patch)
2019-09-27 11:31 PDT, Chris Dumez
no flags
Patch (23.42 KB, patch)
2019-09-27 11:45 PDT, Chris Dumez
no flags
Patch (78.13 KB, patch)
2019-09-27 14:58 PDT, Chris Dumez
no flags
Patch (28.72 KB, patch)
2019-09-27 14:59 PDT, Chris Dumez
no flags
Patch (24.38 KB, patch)
2019-09-27 15:00 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-27 09:57:52 PDT
Chris Dumez
Comment 2 2019-09-27 10:59:35 PDT
Created attachment 379742 [details] WIP Patch
Chris Dumez
Comment 3 2019-09-27 11:31:19 PDT
Created attachment 379745 [details] WIP Patch
Chris Dumez
Comment 4 2019-09-27 11:45:37 PDT
Chris Dumez
Comment 5 2019-09-27 14:58:24 PDT
Chris Dumez
Comment 6 2019-09-27 14:59:22 PDT
Chris Dumez
Comment 7 2019-09-27 15:00:39 PDT
WebKit Commit Bot
Comment 8 2019-09-27 15:42:27 PDT
Comment on attachment 379771 [details] Patch Clearing flags on attachment: 379771 Committed r250464: <https://trac.webkit.org/changeset/250464>
WebKit Commit Bot
Comment 9 2019-09-27 15:42:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.