Pages using WebGLRenderingContext fail to enter the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=202318 <rdar://problem/55783612>

Reviewed by Tim Horton.

Source/WebCore:

Allow pages with a WebGLRenderingContext to enter the back/forward cache by updating the
implementation to use SuspendableTimers to fire JS events. This guarantees that no events
will be fired (and thus no JS will run) while in the page cache.

This was preventing some of the pages on weather.com and facebook.com from entering the
back/forward cache.

Test: fast/canvas/webgl/canvas-webgl-page-cache.html

* dom/DocumentEventQueue.cpp:
* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::WebGLRenderingContextBase):
(WebCore::WebGLRenderingContextBase::canSuspendForDocumentSuspension const):
(WebCore::WebGLRenderingContextBase::suspend):
(WebCore::WebGLRenderingContextBase::resume):
(WebCore::WebGLRenderingContextBase::dispatchContextLostEvent):
(WebCore::WebGLRenderingContextBase::maybeRestoreContext):
(WebCore::WebGLRenderingContextBase::dispatchContextChangedNotification):
(WebCore::WebGLRenderingContextBase::dispatchContextChangedEvent):
* html/canvas/WebGLRenderingContextBase.h:
* page/DOMTimer.cpp:
(WebCore::DOMTimer::DOMTimer):
* page/DOMTimer.h:
* page/SuspendableTimer.cpp:
(WebCore::SuspendableTimerBase::SuspendableTimerBase):
(WebCore::SuspendableTimerBase::hasPendingActivity const):
(WebCore::SuspendableTimerBase::stop):
(WebCore::SuspendableTimerBase::suspend):
(WebCore::SuspendableTimerBase::resume):
(WebCore::SuspendableTimerBase::canSuspendForDocumentSuspension const):
(WebCore::SuspendableTimerBase::didStop):
(WebCore::SuspendableTimerBase::cancel):
(WebCore::SuspendableTimerBase::startRepeating):
(WebCore::SuspendableTimerBase::startOneShot):
(WebCore::SuspendableTimerBase::repeatInterval const):
(WebCore::SuspendableTimerBase::augmentFireInterval):
(WebCore::SuspendableTimerBase::augmentRepeatInterval):
(WebCore::SuspendableTimer::activeDOMObjectName const):
* page/SuspendableTimer.h:

Source/WebKitLegacy/win:

* WebView.cpp:
(WindowCloseTimer::WindowCloseTimer):
(WindowCloseTimer::contextDestroyed):
* WebView.h:

LayoutTests:

Add layout test coverage.

* fast/canvas/webgl/canvas-webgl-page-cache-expected.txt: Added.
* fast/canvas/webgl/canvas-webgl-page-cache.html: Added.


Canonical link: https://commits.webkit.org/215880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250464 268f45cc-cd09-0410-ab3c-d52691b4dbfc